# Syncademic

./: .dockerignore  .env.example  .firebaserc  .gitignore  DEVELOPMENT.md  README.md  admin.Dockerfile  firebase.json  firestore.rules
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  functions-unit-tests.yml  verify-frontend-version-bump.yml
admin/: README.md  app.py  pyproject.toml
admin/pages/: ai_studio.py  authorizations.py  dashboard.py  ics_studio.py  sync_profiles.py  users.py
admin/src/admin/pages/: ai_studio.py  authorizations.py  dashboard.py  ics_studio.py  sync_profiles.py  users.py
admin/src/admin/shared/: data_service.py  event_display.py
backend/: .dockerignore  AGENTS.md  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/backend/: api.py  bootstrap.py  handlers.py  logging_config.py  settings.py
backend/backend/ai/: prompts.py  ruleset_builder.py  time_schedule_compressor.py  types.py
backend/backend/infrastructure/: event_bus.py
backend/backend/models/: authorization.py  base.py  rules.py  schemas.py  sync_profile.py  user.py
backend/backend/repositories/: backend_authorization_repository.py  sync_profile_repository.py  sync_stats_repository.py
backend/backend/services/: ai_ruleset_service.py  authorization_service.py  dev_notification_service.py  google_calendar_service.py  ics_service.py  sync_profile_service.py  user_service.py
backend/backend/services/exceptions/: auth.py  mapping.py  ruleset.py  sync.py  target_calendar.py
backend/backend/shared/: domain_events.py  event.py  test_google_calendar_colors.py
backend/backend/synchronizer/: google_calendar_manager.py  ics_cache.py  ics_parser.py  ics_source.py
backend/tests/: conftest.py  test_event_flow.py  test_settings.py  util.py
backend/tests/infrastructure/: test_event_bus.py
backend/tests/models/: test_authorization.py  test_base.py  test_rules.py  test_schemas.py  test_sync_profile.py
backend/tests/repositories/: test_backend_authorization_repository.py  test_mock_sync_profile_repository.py  test_mock_sync_stats_repository.py  test_sync_profile_repository.py  test_sync_stats_repository.py
backend/tests/services/: test_ai_ruleset_service.py  test_ics_service.py  test_sync_profile_service.py
backend/tests/shared/: event_test.py
backend/tests/synchronizer/: google_calendar_manager_test.py  ics_cache_test.py  ics_parser_test.py  ics_source_test.py  test_mock_google_calendar_manager.py
dev/: firestore.md
dev/calendar-visualization/: README.md  app.py  pyproject.toml
dev/calendar-visualization/pii/: pii_identifier.py
dev/docs/: ai.md  concepts.md  faq.md  firestore.md
example_data/ics/: L3 MathsInfo_ki77l4n0jskqcu93kj43if8onk@group.calendar.google.com.ics  absurd_FR_1_23_24.ics  absurd_FR_1_23_24.ics_postponed_BY_120days_2024-05-02T-00-31-43.ics  absurd_courses_and_teachers.json  example_L3.txt  (+2 more)
functions/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
functions/functions/: bootstrap.py  handlers.py  settings.py
functions/functions/ai/: prompts.py  ruleset_builder.py  time_schedule_compresser.py  time_schedule_compressor.py  types.py
functions/functions/infrastructure/: event_bus.py
functions/functions/models/: __init__.py  authorization.py  rules.py  schemas.py  sync_profile.py  user.py
functions/functions/repositories/: backend_authorization_repository.py  sync_profile_repository.py  sync_stats_repository.py
functions/functions/rules/: constants.py  models.py
functions/functions/services/: ai_ruleset_service.py  authorization_service.py  dev_notification_service.py  google_calendar_service.py  ics_service.py  sync_profile_service.py  synchronization_service.py  user_service.py
functions/functions/services/exceptions/: __init__.py  auth.py  base.py  ics.py  mapping.py
functions/functions/shared/: domain_events.py  event.py  google_calendar_colors.py
functions/functions/synchronizer/: google_calendar_manager.py  ics_cache.py  ics_parser.py  ics_source.py  synchronizer.py  test-apple.ipynb
functions/functions/synchronizer/middleware/: insa_middleware.py  middleware.py
functions/rules/: pyproject.toml
functions/rules/src/: models.py
functions/rules/tests/: test_evaluation.py  test_models.py
functions/shared/: pyproject.toml
functions/shared/shared/: event.py
functions/src/rules/: models.py
functions/src/shared/: event.py  google_calendar_colors.py
functions/src/synchronizer/: google_calendar_manager.py  ics_cache.py  ics_parser.py  ics_source.py  synchronizer.py
functions/src/synchronizer/middleware/: insa_middleware.py  middleware.py
functions/synchronizer/: requirements.txt  setup.py
functions/synchronizer/synchronizer/: event.py  google_calendar_manager.py  ics_parser.py  ics_source.py  synchronizer.py
functions/synchronizer/synchronizer/middleware/: insa_middleware.py  middleware.py
functions/synchronizer/tests/: event_test.py  google_calendar_manager_test.py  ics_parser_test.py  middleware_test.py  synchronizer_test.py
functions/tests/: test_event_flow.py  test_handlers.py  test_settings.py
functions/tests/infrastructure/: test_event_bus.py
functions/tests/models/: test_authorization.py  test_rules.py  test_schemas.py  test_sync_profile.py
functions/tests/repositories/: test_mock_sync_profile_repository.py  test_mock_sync_stats_repository.py  test_sync_profile_repository.py  test_sync_stats_repository.py
functions/tests/rules/: constants.py  test_evaluation.py  test_models.py
functions/tests/services/: test_ai_ruleset_service.py  test_ics_service.py  test_sync_profile_service.py
functions/tests/shared/: event_test.py
functions/tests/synchronizer/: event_test.py  google_calendar_manager_test.py  ics_cache_test.py  ics_parser_test.py  ics_source_test.py  middleware_test.py  mock_google_calendar_manager.py  synchronizer_test.py  test_mock_google_calendar_manager.py
syncademic_app/: .env.example  .env.template  .gitignore  README.md  dotenv  dotenv.template  googleapis.md  pubspec.yaml
synchronizer/: README.py
(+132 files in other folders)
