[tool.pyright]
extraPaths = ["../"]
reportMatchNotExhaustive = true

[project]
name = "admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backend",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
    "streamlit-calendar>=1.2.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pytest>=8.3.4", "ruff>=0.9.6"]

[tool.uv.sources]
backend = { path = "../backend", editable = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
