[tool.poetry]
name = "functions"
version = "0.1.0"
description = ""
authors = ["Samuel Mallet  <69467005+SuperMuel@users.noreply.github.com>"]
readme = "README.md"
package-mode=false
packages = [
    { include = "functions", from = "." }
]



[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.3.0"
validators = "^0.34.0"
pydantic = "^2.9.2"
ics = "^0.7.2"
pytz = "^2024.2"
requests = "^2.32.3"
google-auth-oauthlib = "^1.2.1"
firebase-functions = "^0.2.0"
functions-framework = "^3.8.1"
google-api-python-client = "^2.120.0"
google-auth-httplib2 = "^0.2.0"
pydantic-settings = "^2.5.2"
hdbscan = "^0.8.39"
scikit-learn = "^1.5.2"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
langchain-anthropic = "^0.2.3"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
