[project]
name = "functions"
version = "0.1.0"
description = "Syncademic Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.3.0",
    "firebase-functions>=0.2.0",
    "google-api-python-client>=2.120.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "langchain-anthropic>=0.2.3",
    "langchain-openai>=0.2.2",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "validators>=0.34.0",
    "scikit-learn>=1.5.2",
    "ics>=0.7.2",
    "functions-framework>=3.8.1",
    "hdbscan>=0.8.39",
    "langchain>=0.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "responses>=0.25.3",
    "ruff>=0.6.9",
]
